--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,8 @@
-{
-  
+{ 
+  "scripts":{
+        "start" : "npm install && node server.js"
+    },
+
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
